--- a/src/app/pages/tab2/tab2.page.html
+++ b/src/app/pages/tab2/tab2.page.html
@@ -1,17 +1,20 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
+<ion-header [translucent]="true" no-border>
+  <ion-toolbar color="primary">
     <ion-title>
-      Tab 2
+      Mis Asuntos
     </ion-title>
   </ion-toolbar>
+
+  <ion-segment scrollable color="primary">
+    <ion-segment-button mode="md"
+      *ngFor="let miAsunto of misAsuntos"
+      [value]="miAsunto">
+      <ion-label text-capitalize>{{ miAsunto }}</ion-label>
+    </ion-segment-button>
+  
+  </ion-segment>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
-</ion-content>
+
+
