Terminada la presentación de avisos y favoritos

--- a/src/app/components/avisos/avisos.component.html
+++ b/src/app/components/avisos/avisos.component.html
@@ -4,7 +4,11 @@
     <ion-col size="12" size-lg="3" size-md="4" size-sm="6" size-xs="12"
      *ngFor="let aviso of avisos; let i=index;">
 
-     <app-aviso [aviso]="aviso" [idAviso]="i"></app-aviso>
+     <app-aviso 
+          [aviso]="aviso"
+          [idAviso]="i"
+          [enFavoritos]="enFavoritos"
+     ></app-aviso>
 
     </ion-col>
   
