--- a/src/app/pages/tab3/tab3.page.html
+++ b/src/app/pages/tab3/tab3.page.html
@@ -1,17 +1,28 @@
-<ion-header [translucent]="true"  no-border>
-  <ion-toolbar>
+<ion-header no-border>
+  <ion-toolbar color="primary">
     <ion-title>
-      Tab 3
+      Favoritos
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+
+  <ion-slides [options]="sliderOpts"
+              *ngIf="datalocalService.avisos.length === 0">
+    <ion-slide>
+      
+      <ion-label>No hay favoritos</ion-label>
+
+    </ion-slide>
+  </ion-slides>
+
+
+
+  <app-avisos  *ngIf="datalocalService.avisos.length > 0"
+                [avisos]="datalocalService.avisos"
+                [enFavoritos]="true" ></app-avisos>
+
+
 </ion-content>
