--- a/src/app/components/aviso/aviso.component.html
+++ b/src/app/components/aviso/aviso.component.html
@@ -1,9 +1,19 @@
 
-  <ion-card>
+  <ion-card class="animated fadeIn">
     <ion-card-header>
-      <ion-card-subtitle class="text-primary">
+      <ion-card-title class="text-primary">
         <span >{{ idAviso + 1 }}. </span>
         {{ aviso.titulo }}
+        <div class="aviso-more">
+          <ion-button fill="clear"
+                      (click)="lanzarMenu()" >
+                      <ion-icon slot="icon-only" 
+                      name="ellipsis-vertical"></ion-icon>
+           </ion-button>
+        </div>
+      </ion-card-title>
+      <ion-card-subtitle color="dark">
+        Desde: {{ aviso.fechaInicioVigencia }} hasta el {{ aviso.fechaFinVigencia}}
       </ion-card-subtitle>
     </ion-card-header>
       <ion-card-content>
