--- a/src/app/pages/tab1/tab1.page.html
+++ b/src/app/pages/tab1/tab1.page.html
@@ -8,7 +8,7 @@
 
 <ion-content [fullscreen]="true">
 
-  <app-avisos  *ngIf="errorCarga" [avisos]="avisos"></app-avisos>
+  <app-avisos  *ngIf="!errorCarga" [avisos]="avisos"></app-avisos>
 
   
   <ion-slides [options]="sliderOpts"
